--- a/index.html
+++ b/index.html
@@ -9,29 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <!-- <div class="calendar">
-        <div class="month">
-          <button id="prevMonth">Previous</button>
-          <div class="date">
-            <h1></h1>
-            <p></p>
-          </div>
-          <button id="nextMonth">Next</button>
-        </div>
-        <div class="weekdays">
-          <div>Mon</div>
-          <div>Tue</div>
-          <div>Wed</div>
-          <div>Thu</div>
-          <div>Fri</div>
-          <div>Sat</div>
-          <div>Sun</div>
-        </div>
-        <div class="days"></div>
-      </div>
-      <button id="todayButton">Go to Today</button> -->
     </div>
-    <!-- <script src="script.js"></script> -->
-    <script src="demo.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
